LPS-29213 - Fix Classic Theme Nav z-index for IE7 only. IE8 fix forthcoming with LPS-32757

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom.css
@@ -115,6 +115,10 @@ hr, .separator {
 	height: 1%;
 }
 
+.ie7 #banner {
+	z-index: 1;
+}
+
 /* ---------- Main navigation ---------- */
 
 #navigation {
